fix hover effect/ edit layout of thumbs / fix z-index for nav

--- a/css/screen.css
+++ b/css/screen.css
@@ -115,6 +115,7 @@ body {
   top: 0;
   margin-top: 0;
   right: 0;
+  z-index: 10;
 }
 /* line 27, ../scss/_layout.scss */
 .wrap .sticky-wrapper .nav__item a {
@@ -284,39 +285,42 @@ body {
 /* line 109, ../scss/_layout.scss */
 .projects .projects__item {
   background: transparent;
+  position: relative;
+  display: block;
+  padding: 12px 6px;
 }
-/* line 113, ../scss/_layout.scss */
+/* line 117, ../scss/_layout.scss */
 .projects .projects__item:hover, .projects .projects__item:focus {
   background: white url('/i/pattern.png?1379512586') center center repeat;
 }
-/* line 118, ../scss/_layout.scss */
+/* line 121, ../scss/_layout.scss */
 .projects .projects__item .thumb {
   display: block;
   padding-bottom: 6px;
-  padding-top: 12px;
   border-bottom: none;
   color: black;
+  position: relative;
 }
-/* line 126, ../scss/_layout.scss */
+/* line 129, ../scss/_layout.scss */
 .projects .projects__item .thumb img {
   margin-bottom: 4px;
 }
-/* line 132, ../scss/_layout.scss */
+/* line 134, ../scss/_layout.scss */
 .projects .projects__item .thumb:hover {
   color: black;
 }
 
-/* line 140, ../scss/_layout.scss */
+/* line 142, ../scss/_layout.scss */
 .collaborations {
   list-style: none;
 }
-/* line 143, ../scss/_layout.scss */
+/* line 145, ../scss/_layout.scss */
 .collaborations .collaborations__item {
   display: inline-block;
   *display: inline;
   zoom: 1;
 }
-/* line 148, ../scss/_layout.scss */
+/* line 150, ../scss/_layout.scss */
 .collaborations .collaborations__item .collaborations__link {
   text-indent: -9878px;
   display: block;
@@ -326,57 +330,57 @@ body {
   margin: 0 36px 24px 0;
   border-bottom: none;
 }
-/* line 157, ../scss/_layout.scss */
+/* line 159, ../scss/_layout.scss */
 .collaborations .collaborations__item .upstream {
   background-position: -555px -60px;
   width: 194px;
 }
-/* line 161, ../scss/_layout.scss */
+/* line 163, ../scss/_layout.scss */
 .collaborations .collaborations__item .upstream:hover {
   background-position: -555px 0;
 }
-/* line 165, ../scss/_layout.scss */
+/* line 167, ../scss/_layout.scss */
 .collaborations .collaborations__item .intaxi {
   background-position: 0 -61px;
   width: 156px;
 }
-/* line 169, ../scss/_layout.scss */
+/* line 171, ../scss/_layout.scss */
 .collaborations .collaborations__item .intaxi:hover {
   background-position: 0 0;
 }
-/* line 173, ../scss/_layout.scss */
+/* line 175, ../scss/_layout.scss */
 .collaborations .collaborations__item .kidsters {
   background-position: -165px -60px;
   width: 169px;
 }
-/* line 177, ../scss/_layout.scss */
+/* line 179, ../scss/_layout.scss */
 .collaborations .collaborations__item .kidsters:hover {
   background-position: -165px 0;
 }
-/* line 181, ../scss/_layout.scss */
+/* line 183, ../scss/_layout.scss */
 .collaborations .collaborations__item .centrida {
   background-position: -345px -62px;
   width: 200px;
 }
-/* line 185, ../scss/_layout.scss */
+/* line 187, ../scss/_layout.scss */
 .collaborations .collaborations__item .centrida:hover {
   background-position: -346px 0;
 }
 
-/* line 195, ../scss/_layout.scss */
+/* line 197, ../scss/_layout.scss */
 .cv dl dt {
   margin-top: 1em;
 }
-/* line 198, ../scss/_layout.scss */
+/* line 200, ../scss/_layout.scss */
 .cv dl dd {
   margin-bottom: 0;
 }
-/* line 204, ../scss/_layout.scss */
+/* line 206, ../scss/_layout.scss */
 .cv .experience .period,
 .cv .experience .description {
   color: #404040;
 }
-/* line 209, ../scss/_layout.scss */
+/* line 211, ../scss/_layout.scss */
 .cv .lang ul {
   list-style: none;
 }
@@ -1058,14 +1062,13 @@ dl dt {
   }
   /* line 44, ../scss/_768.scss */
   .projects .projects__item {
-    width: 30%;
-    margin: 0 2.9% 32px 0;
+    width: 31%;
+    margin: 0 1.9% 32px 0;
     display: -moz-inline-stack;
     display: inline-block;
     *display: inline;
     zoom: 1;
     vertical-align: top;
-    padding: 0;
   }
 
   /* line 60, ../scss/_768.scss */
